--- a/act-database/act-database-h2/pom.xml
+++ b/act-database/act-database-h2/pom.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.gsobko</groupId>
+        <artifactId>act-database</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>com.gsobko</groupId>
     <artifactId>act-database-h2</artifactId>
@@ -18,6 +23,11 @@
             <groupId>com.gsobko</groupId>
             <artifactId>act-database-model</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
         </dependency>
     </dependencies>
 </project>
