--- a/act-database/pom.xml
+++ b/act-database/pom.xml
@@ -16,7 +16,7 @@
 
     <modules>
         <module>act-database-api</module>
-        <module>act-database-simple-im</module>
+        <module>act-database-simple4test-im</module>
         <module>act-database-h2</module>
         <module>act-database-model</module>
     </modules>
