--- a/act-database/act-database-jdbc/pom.xml
+++ b/act-database/act-database-jdbc/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.gsobko</groupId>
-    <artifactId>act-database-h2</artifactId>
+    <artifactId>act-database-jdbc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
