--- a/act-test-pack/src/test/resources/testkit.properties
+++ b/act-test-pack/src/test/resources/testkit.properties
@@ -1,4 +1,5 @@
 # if embedded=true test will run server in same jvm and test against it
 embedded=true
+config=accountee.yaml
 #url is for non-embedded
 #url=http://localhost:8000
