--- a/act-core/pom.xml
+++ b/act-core/pom.xml
@@ -53,6 +53,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+
+
         <!-- in tests we use our own impl of database - simple in memory -->
         <dependency>
             <groupId>com.gsobko</groupId>
